Fixed inbox message counter overlapping the envelope icon

--- a/src/app/module-viewer/left-sidebar/left-sidebar.component.sass
+++ b/src/app/module-viewer/left-sidebar/left-sidebar.component.sass
@@ -65,6 +65,11 @@ ul
     flex-direction: column
     justify-content: center
     cursor: pointer
+
+    .menu-item-container
+      display: inline-block
+      position: relative;
+
     .mat-icon
       font-size: $iconsize
       height: $iconsize
@@ -81,13 +86,29 @@ ul
           color:  white
           background: #00519e
           border-color: white
-          
-        
+
+
     .menu-item-counter
       position: absolute
-      right: 10px
-      padding: 0 5px
-      border-radius: 10px
+      right: -20%
+      top: -20%
+      font-size: 10px
+      border-radius: 100%
       background: #e89600
       color: white
+      width: 2em
 
+      &:after
+        content: ""
+        display: block
+        padding-bottom: 100%
+
+      .counter-content
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        left: 0
+        align-items: center
+        display: flex
+        justify-content: center
